--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,53 +1,53 @@
-name: Test and Deploy
-
-on:
-  push:
-    branches: [ "master" ]
-  workflow_dispatch:
-
-jobs:
-  deploy_to_server:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Backup productions file
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SERVER_IP }}
-        username: ${{ secrets.SERVER_USERNAME }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
-        script: |
-          cd /home/ubuntu/web/tchiiz/crueltouch
-          mv ./productions.py ./productions.py.backup
-
-    - name: Copy files to server
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.SERVER_IP }}
-        username: ${{ secrets.SERVER_USERNAME }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
-        source: "."
-        target: "/home/ubuntu/web/tchiiz"
-
-    - name: Restore productions backup file
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SERVER_IP }}
-        username: ${{ secrets.SERVER_USERNAME }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
-        script: |
-          cd /home/ubuntu/web/tchiiz/crueltouch
-          mv ./productions.py.backup ./productions.py
-
-    - name: Execute deploy command on server
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SERVER_IP }}
-        username: ${{ secrets.SERVER_USERNAME }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
-        script: |
-          cd /home/ubuntu/scripts/
-          ./reload_websites_specific.sh crueltouch
+#name: Test and Deploy
+#
+#on:
+#  push:
+#    branches: [ "master" ]
+#  workflow_dispatch:
+#
+#jobs:
+#  deploy_to_server:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#    - name: Checkout code
+#      uses: actions/checkout@v2
+#
+#    - name: Backup productions file
+#      uses: appleboy/ssh-action@master
+#      with:
+#        host: ${{ secrets.SERVER_IP }}
+#        username: ${{ secrets.SERVER_USERNAME }}
+#        key: ${{ secrets.SERVER_SSH_KEY }}
+#        script: |
+#          cd /home/ubuntu/web/tchiiz/crueltouch
+#          mv ./productions.py ./productions.py.backup
+#
+#    - name: Copy files to server
+#      uses: appleboy/scp-action@master
+#      with:
+#        host: ${{ secrets.SERVER_IP }}
+#        username: ${{ secrets.SERVER_USERNAME }}
+#        key: ${{ secrets.SERVER_SSH_KEY }}
+#        source: "."
+#        target: "/home/ubuntu/web/tchiiz"
+#
+#    - name: Restore productions backup file
+#      uses: appleboy/ssh-action@master
+#      with:
+#        host: ${{ secrets.SERVER_IP }}
+#        username: ${{ secrets.SERVER_USERNAME }}
+#        key: ${{ secrets.SERVER_SSH_KEY }}
+#        script: |
+#          cd /home/ubuntu/web/tchiiz/crueltouch
+#          mv ./productions.py.backup ./productions.py
+#
+#    - name: Execute deploy command on server
+#      uses: appleboy/ssh-action@master
+#      with:
+#        host: ${{ secrets.SERVER_IP }}
+#        username: ${{ secrets.SERVER_USERNAME }}
+#        key: ${{ secrets.SERVER_SSH_KEY }}
+#        script: |
+#          cd /home/ubuntu/scripts/
+#          ./reload_websites_specific.sh crueltouch
